Fixed Pictures and Cleaned up text

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -53,13 +53,13 @@
                     <!-- END MAIN MENU -->
                     
                     <!-- SOCIAL ICONS -->
-                    <div class="social-icons hover-big pull-right">
+                    <!-- <div class="social-icons hover-big pull-right">
                         <a href="#" class="sicon-facebook"><i>Facebook</i></a>
                         <a href="#" class="sicon-twitter"><i>Twitter</i></a>
                         <a href="#" class="sicon-linkedin"><i>LinkedIn</i></a>
                         <a href="#" class="sicon-youtube"><i>Youtube</i></a>
                         <a href="#" class="sicon-pinterest"><i>Pinterest</i></a>
-                    </div>
+                    </div> -->
                     <!-- END SOCIAL ICONS -->
                 </div>
             </div>
@@ -107,7 +107,7 @@
                                 </li></ul></div></div>
                         </div>
                         <p>Voted the best beach in America!</p>
-                        <div class="social-icons sicon-white bordered">
+                        <!-- <div class="social-icons sicon-white bordered">
                             <a href="https://www.facebook.com/skbeach1" class="sicon-facebook">
                                 <i><img src="assets/images/css/sicon-set-white.png"></i></a>
                             
@@ -115,7 +115,7 @@
                             <a href="http://www.linkedin.com/pub/tracy-walsh-freeman/1b/356/b75" class="sicon-linkedin"><i>LinkedIn</i></a>
                             <a href="http://www.youtube.com/watch?v=4VkYfIyfjkI" class="sicon-youtube"><i>Youtube</i></a>
                             <a href="http://www.pinterest.com/search/pins/?q=siesta%20key" class="sicon-pinterest"><i>Pinterest</i></a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -177,7 +177,7 @@
                     <li class="span4 mix illustration mix_all" style="display: inline-block; opacity: 1;">
                         <a href="http://www.homeaway.com/vacation-rental/p3712105" data-destination="portfolio-items" data-insert="before">
                             <!-- Portfolio image -->
-                            <img src="/assets/images/pages/condo/bayoaksentry.jpg" alt="Treble">
+                            <img src="/assets/images/pages/condo/390_bayoaksentry.jpg" alt="Treble">
                             
                             <!-- Portfolio name, activated on hover -->
                             <div class="portfolio-overlay">
@@ -187,7 +187,7 @@
                     </li>
                     <li class="span4 mix branding typography branding mix_all" style="display: inline-block; opacity: 1;">
                         <a href="http://www.homeaway.com/vacation-rental/p3712105" data-destination="portfolio-items" data-insert="before">
-                            <img src="/assets/images/pages/condo/living.jpg" alt="Treble">
+                            <img src="/assets/images/pages/condo/390_living.jpg" alt="Treble">
                             <div class="portfolio-overlay">
                                 <h4>Visit Booking Site</h4>
                             </div>
@@ -195,7 +195,7 @@
                     </li>
                     <li class="span4 mix typography branding mix_all" style="display: inline-block; opacity: 1;">
                         <a href="http://www.homeaway.com/vacation-rental/p3712105" data-destination="portfolio-items" data-insert="before">
-                            <img src="/assets/images/pages/condo/dining.jpg" alt="Treble">
+                            <img src="/assets/images/pages/condo/390_dining.jpg" alt="Treble">
                             <div class="portfolio-overlay">
                                 <h4>Visit Booking Site</h4>
                             </div>
@@ -203,7 +203,7 @@
                     </li>
                     <li class="span4 mix typography branding mix_all" style="display: inline-block; opacity: 1;">
                         <a href="http://www.homeaway.com/vacation-rental/p3712105" data-destination="portfolio-items" data-insert="before">
-                            <img src="/assets/images/pages/condo/kitchen.jpg" alt="Treble">
+                            <img src="/assets/images/pages/condo/390_kitchen.jpg" alt="Treble">
                             <div class="portfolio-overlay">
                                 <h4>Visit Booking Site</h4>
                             </div>
@@ -211,7 +211,7 @@
                     </li>
                     <li class="span4 mix illustration mix_all" style="display: inline-block; opacity: 1;">
                         <a href="http://www.homeaway.com/vacation-rental/p3712105" data-destination="portfolio-items" data-insert="before">
-                            <img src="/assets/images/pages/condo/bopool.jpg" alt="Treble">
+                            <img src="/assets/images/pages/condo/390_bopool.jpg" alt="Treble">
                             <div class="portfolio-overlay">
                                 <h4>Visit Booking Site</h4>
                             </div>
@@ -219,7 +219,7 @@
                     </li>
                     <li class="span4 photography typography mix_all" style="display: inline-block; opacity: 1;">
                         <a href="http://www.homeaway.com/vacation-rental/p3712105" data-destination="portfolio-items" data-insert="before">
-                            <img src="/assets/images/pages/condo/bed1.jpg" alt="Treble">
+                            <img src="/assets/images/pages/condo/390_bed1.jpg" alt="Treble">
                             <div class="portfolio-overlay">
                                 <h4>Visit Booking Site</h4>
                             </div>
@@ -227,7 +227,7 @@
                     </li>
                     <li class="span4 mix photography typography mix_all" style="display: inline-block; opacity: 1;">
                         <a href="http://www.homeaway.com/vacation-rental/p3712105" data-destination="portfolio-items" data-insert="before">
-                            <img src="/assets/images/pages/condo/masterbath.jpg" alt="Treble">
+                            <img src="/assets/images/pages/condo/390_masterbath.jpg" alt="Treble">
                             <div class="portfolio-overlay">
                                 <h4>Visit Booking Site</h4>
                             </div>
@@ -235,7 +235,7 @@
                     </li>
                     <li class="span4 mix photography typography mix_all" style="display: inline-block; opacity: 1;">
                         <a href="http://www.homeaway.com/vacation-rental/p3712105" data-destination="portfolio-items" data-insert="before">
-                            <img src="/assets/images/pages/condo/1bedroom2.jpg" alt="Treble">
+                            <img src="/assets/images/pages/condo/390_1bedroom2.jpg" alt="Treble">
                             <div class="portfolio-overlay">
                                 <h4>Visit Booking Site</h4>
                             </div>
@@ -243,7 +243,7 @@
                     </li>
                     <li class="span4 mix illustration mix_all" style="display: inline-block; opacity: 1;">
                         <a href="http://www.homeaway.com/vacation-rental/p3712105" data-destination="portfolio-items" data-insert="before">
-                            <img src="/assets/images/pages/condo/pier.jpg" alt="Treble">
+                            <img src="/assets/images/pages/condo/390_pier.jpg" alt="Treble">
                             <div class="portfolio-overlay">
                                 <h4>Visit Booking Site</h4>
                             </div>
@@ -561,17 +561,17 @@
             <header>
                 <h4 class="line-divider">News</h4>
                 <h1>Siesta Key News</h1>
-                <div class="row">
+                <!-- <div class="row">
                     <div class="span8 offset2">
                         <div class="input-append">
                           <input class="span5" id="appendedInputButton" type="text" placeholder="Search Blog">
                           <button class="btn btn-primary sicon-search sicon-white" type="button"><i>Search</i></button>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 
                 <!-- Sub menu -->
-                <nav class="submenu">
+                <!-- <nav class="submenu">
                     <ul>
                         <li>
                             <a href="./pages/blog/blog.html">All</a>
@@ -592,7 +592,7 @@
                             <a href="./pages/blog/blog.html">Other</a>
                         </li>
                     </ul>
-                </nav>
+                </nav> -->
             </header>
             <!-- End Header -->
             
@@ -713,7 +713,7 @@
                 <div class="row">
                     <div class="span8 offset2">
                         <p>
-                            We like to create things with fun, open-minded people. Feel free to say hello! We'll respond as soon as possible.
+                            If you're looking for a vacation rental, it's best to visit our Homeaway page. If you have questions, call text or email us.
                         </p>
                     </div>
                 </div>
