--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -78,7 +78,7 @@ Everyday scripting for ruby -->
                 <div class="row-fluid">
                     <div class="span12 center">
                         <!-- Animated logo -->
-                        <div class="logo">
+                        <!-- <div class="logo">
                             <div class="scrollNormal">
                                 <a href="#page-work">
                                     <img src="assets/pages/welcome/logo_welcome.png" width="140" height="140" alt="Treble">
@@ -89,7 +89,7 @@ Everyday scripting for ruby -->
                                     <img src="assets/pages/welcome/logo2_welcome.png" width="140" height="140" alt="Treble">
                                 </a>
                             </div> 
-                        </div>
+                        </div> -->
                         
                         <div class="line-divider" id="welcome-messages">
                             <div class="bx-wrapper" style="max-width: 100%; margin: 0px auto;"><div class="bx-viewport" style="width: 100%; overflow: hidden; position: relative; height: 96px;"><ul class="slides" style="width: auto; position: relative; top: -288px;"><li style="float: none; list-style: none; position: relative; width: 1230px;" class="bx-clone">
