fixed typo under spanish point

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -412,7 +412,7 @@ Everyday scripting for ruby -->
                         </h5>
                         
                         <!-- Team member short info -->
-                        <p class="smallFontBy08">Whether you're driving up or docking your boat bar-side, this place is definitely worht the trip. </p>
+                        <p class="smallFontBy08">Whether you're driving up or docking your boat bar-side, this place is definitely worth the trip. </p>
                     </li>
                     <li class="span4 center">
                         <div class="item">
