Grammar on the website

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -336,7 +336,7 @@ Everyday scripting for ruby -->
                     <div class="span8 offset2">
                         <div class="quote center">
                             <div id="quote-slider" class="slide">
-                                <!-- Carousel items -->
+                                <!-- Carousel items 
                                 <div class="carousel-inner">
                                     <div class="active item">
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
@@ -351,7 +351,7 @@ Everyday scripting for ruby -->
                                         <h5>Happy client</h5>
                                     </div>
                                 </div>
-                                <!-- Carousel indicators -->
+                                <!-- Carousel indicators 
                                 <ol class="carousel-indicators">
                                     <li data-target="#quote-slider" data-slide-to="0" class="active"></li>
                                     <li data-target="#quote-slider" data-slide-to="1"></li>
@@ -360,7 +360,7 @@ Everyday scripting for ruby -->
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </article>
             <!-- End Article -->
         </div>
@@ -492,7 +492,7 @@ Everyday scripting for ruby -->
                             Ophelia's<br>
                             <small>Fine Dining</small>
                         </h5>
-                        <p class="smallFontBy08">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua,consectetur adipisicing elit.</p>
+                        <p class="smallFontBy08">This classy waterfront dining establishment is calm, quiet and relaxing located at the very south end of Siesta Key.</p>
                     </li>
                     <li class="span4 center">
                          <div class="item">
@@ -509,10 +509,10 @@ Everyday scripting for ruby -->
                         </div>
                         
                         <h5>
-                            Joanna doe<br>
-                            <small>Creative director</small>
+                            Daiquiri Deck<br>
+                            <small>Party Time</small>
                         </h5>
-                        <p class="smallFontBy08">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua,consectetur adipisicing elit.</p>
+                        <p class="smallFontBy08">A Gulf classic, Daiquiri Deck is in the business district of Siesta Key. There are TVs to watch sports and they regularly have live music.</p>
                     </li>
                 </ul>
             </article>
